--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -14,12 +14,40 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="/"><span>Bookers</span></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          
+          <div class="collapse navbar-collapse text-white" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto" >
+
+              <li>
+                <%= link_to "マイページ", class:"m-2 text-light" %>
+              </li>
+              <li>
+                <%= link_to "商品一覧", class:"m-2 text-light" %>
+              </li>
+              <li>
+                <%= link_to "カート", class:"m-2 text-light" %>
+              </li>
+              <li>
+                <%= link_to "ログアウト", class:"m-2 text-light" %>
+              </li>
+
+              <li>
+                <%= link_to "About", class:"m-2 text-light" %>
+              </li>
+              <li>
+                <%= link_to "商品一覧", class:"m-2 text-light" %>
+              </li>
+              <li>
+                <%= link_to "新規登録", class:"m-2 text-light" %>
+              </li>
+              <li>
+                <%= link_to "ログイン", class:"m-2 text-light" %>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
     </header>
