--- a/app/views/pubilc/homes/top.html.erb
+++ b/app/views/pubilc/homes/top.html.erb
@@ -1,1 +1,13 @@
-<h1>トップページです</h1>
+<body>
+  <main>
+    <div class="top_introduction">
+      <p>
+        ようこそ、ながのCAKEへ！<br>
+        このサイトは、ケーキ販売のECサイトになります。<br>
+        会員でない方も商品の閲覧はできますが、<br>
+        購入には会員登録が必要になります。<br>
+      </p>
+      
+    </div>
+  </main>
+</body>
