[Add]public/topページ完成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,6 +51,9 @@
         </div>
       </nav>
     </header>
+    <footer>
+      <div class="container border border-brack h-50"></div>
+    </footer>
     <%= yield %>
   </body>
 </html>
