--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,101 @@
-<h2>Sign up</h2>
+<main>
+  <div class="container">
+    <div class="row">
+      <div>
+        <h3>新規登録</h3>
+      </div>
+    </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= render "public/shared/error_messages", resource: resource %>
+    <div class="row">
+      <div class="col">
+        <%= f.label :名前 %>
+      </div>
+      <div class="col">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <%= f.label :フリガナ %>
+      </div>
+      <div class="col">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <%= f.label :メールアドレス %>
+      </div>
+      <div class="col">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <%= f.label :郵便番号（ハイフンなし） %>
+      </div>
+      <div class="col">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <%= f.label :住所 %>
+      </div>
+      <div class="col">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <%= f.label :電話番号（ハイフンなし） %>
+      </div>
+      <div class="col">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <%= f.label :パスワード（６文字以上） %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %>
+      </div>
+      <div class="col">
+        <%= f.password_field :password, autocomplete: "new-password" %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <%= f.label :パスワード（確認用） %>
+      </div>
+      <div class="col">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <%= f.submit "新規登録" %>
+      </div>
+  <% end %>
+
+    <div class="row">
+        <h3>新規登録</h3>
+    </div>
+    <div class="row">
+        <p>新規登録</p>
+    </div>
+
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
+</main>
 <%= render "public/shared/links" %>
