--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,15 +1,15 @@
 <main>
   <div class="container">
-    <div class="row">
+    <div class="row my-2">
       <div>
-        <h3>新規登録</h3>
+        <h4>新規登録</h4>
       </div>
     </div>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
     <%= render "public/shared/error_messages", resource: resource %>
-    <div class="row">
+    <div class="row mb-1">
       <div class="col">
         <%= f.label :名前 %>
       </div>
@@ -18,7 +18,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row mb-1">
       <div class="col">
         <%= f.label :フリガナ %>
       </div>
@@ -27,7 +27,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row mb-1">
       <div class="col">
         <%= f.label :メールアドレス %>
       </div>
@@ -36,7 +36,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row mb-1">
       <div class="col">
         <%= f.label :郵便番号（ハイフンなし） %>
       </div>
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row mb-1">
       <div class="col">
         <%= f.label :住所 %>
       </div>
@@ -54,7 +54,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row mb-1">
       <div class="col">
         <%= f.label :電話番号（ハイフンなし） %>
       </div>
@@ -63,7 +63,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row mb-1">
       <div class="col">
         <%= f.label :パスワード（６文字以上） %>
       <% if @minimum_password_length %>
@@ -74,7 +74,8 @@
         <%= f.password_field :password, autocomplete: "new-password" %>
       </div>
     </div>
-    <div class="row">
+
+   <div class="row mb-2">
       <div class="col">
         <%= f.label :パスワード（確認用） %>
       </div>
@@ -83,19 +84,25 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="col">
+    <div class="row mb-1 justify-content-center">
+      <div class="col-lg-2" >
         <%= f.submit "新規登録" %>
       </div>
+    </div>
   <% end %>
+  </div>
 
+  <div class="container">
     <div class="row">
-        <h3>新規登録</h3>
+      <h4>既に登録済みの方</h4>
     </div>
     <div class="row">
-        <p>新規登録</p>
+      <div class="col-lg-6 justify-content-center">
+        <p>
+          <%= link_to "こちら", customer_session_path %>
+          からログインして下さい</p>
+      </div>
     </div>
-
   </div>
 </main>
-<%= render "public/shared/links" %>
+
