[fix]db:migrateファイル(admins,costomaers)の修正

--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -55,8 +55,8 @@
       <div class="col">
         <%= f.label :住所 %>
       </div>
-      <div class="col">
-        <%= f.text_area :address, autofocus: true, autocomplete: "address" %>
+      <div class="col-lg-6">
+        <%= f.text_field :address, autofocus: true, autocomplete: "address" %>
       </div>
     </div>
 
