--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,81 +1,1 @@
-<main>
-  <div class="container">
-    <div class="row my-2">
-      <div>
-        <h4>会員情報編集</h4>
-      </div>
-    </div>
-
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-
-    <%= render "public/shared/error_messages", resource: resource %>
-    <div class="row mb-1">
-      <div class="col">
-        <%= f.label :名前 %>
-      </div>
-      <div class="col">
-        <p>（姓）</p><%= f.text_field :last_name, autocomplete: "last_name" %>
-      </div>
-      <div class="col">
-        <p>（名）</p><%= f.text_field :first_name, autocomplete: "first_name" %>
-      </div>
-    </div>
-
-    <div class="row mb-1">
-      <div class="col">
-        <%= f.label :フリガナ %>
-      </div>
-      <div class="col">
-        <p>（セイ）</p><%= f.text_field :last_name_kana, autocomplete: "last_name_kana" %>
-      </div>
-      <div class="col">
-        <p>（メイ）</p><%= f.text_field :first_name_kana, autocomplete: "first_name_kana" %>
-      </div>
-    </div>
-
-    <div class="row mb-1">
-      <div class="col">
-        <%= f.label :郵便番号 %>
-      </div>
-      <div class="col">
-        <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code" %>
-      </div>
-    </div>
-
-    <div class="row mb-1">
-      <div class="col">
-        <%= f.label :住所 %>
-      </div>
-      <div class="col-lg-6">
-        <%= f.text_field :address, autofocus: true, autocomplete: "address" %>
-      </div>
-    </div>
-
-    <div class="row mb-1">
-      <div class="col">
-        <%= f.label :電話番号 %>
-      </div>
-      <div class="col">
-        <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number" %>
-      </div>
-    </div>
-
-    <div class="row mb-1">
-      <div class="col">
-        <%= f.label :メールアドレス %>
-      </div>
-      <div class="col">
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-      </div>
-    </div>
-
-    <div class="col-lg-4 mr-3" >
-        <%= f.submit "編集内容を保存" %>
-      </div>
-
-      <div class="col-lg-2" >
-        <%= link_to "退会する", class: "btn btn-sm btn-danger" %>
-      </div>
-    </div>
-  <% end %>
-  </div>
+<h1>ここはマイページ作成場所</h1>
