--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -77,7 +77,7 @@
       <% end %>
       </div>
       <div class="col">
-        <%= f.password_field :encrypted_password, autocomplete: "new-password" %>
+        <%= f.password_field :password, autocomplete: "new-password" %>
       </div>
     </div>
 
@@ -86,7 +86,7 @@
         <%= f.label :パスワード（確認用） %>
       </div>
       <div class="col">
-        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        <%= f.password_field :password, autocomplete: "new-password" %>
       </div>
     </div>
 
