--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,10 +35,10 @@
                 </li>
               <% elsif admin_signed_in? %>
                 <li>
-                  <%= link_to "商品一覧", class:"m-2 text-light" %>
+                  <%= link_to "商品一覧", admin_items_path, class:"m-2 text-light" %>
                 </li>
                 <li>
-                  <%= link_to "会員一覧", class:"m-2 text-light" %>
+                  <%= link_to "会員一覧", admin_customer_path, class:"m-2 text-light" %>
                 </li>
                 <li>
                 <%= link_to "注文一覧", class:"m-2 text-light" %>
@@ -48,16 +48,16 @@
                 </li>
               <% else %>
                 <li>
-                  <%= link_to "About", class:"m-2 text-light" %>
+                  <%= link_to "About", public_homes_about_path, class:"m-2 text-light" %>
                 </li>
                 <li>
-                  <%= link_to "商品一覧", class:"m-2 text-light" %>
+                  <%= link_to "商品一覧", public_items_path, class:"m-2 text-light" %>
                 </li>
                 <li>
-                  <%= link_to "新規登録", class:"m-2 text-light" %>
+                  <%= link_to "新規登録", new_customer_registration_path, class:"m-2 text-light" %>
                 </li>
                 <li>
-                  <%= link_to "ログイン", class:"m-2 text-light" %>
+                  <%= link_to "ログイン", new_customer_session_path, class:"m-2 text-light" %>
                 </li>
               <% end %>
             </ul>
