--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,13 +22,13 @@
             <ul class="navbar-nav ml-auto" >
               <% if customer_signed_in? %>
                 <li>
-                  <%= link_to "マイページ", class:"m-2 text-light" %>
+                  <%= link_to "マイページ", public_customers_mypage_path, class:"m-2 text-light" %>
                 </li>
                 <li>
-                  <%= link_to "商品一覧", class:"m-2 text-light" %>
+                  <%= link_to "商品一覧", public_items_path, class:"m-2 text-light" %>
                 </li>
                 <li>
-                <%= link_to "カート", class:"m-2 text-light" %>
+                <%= link_to "カート", public_cart_items_index_path, class:"m-2 text-light" %>
                 </li>
                 <li>
                   <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class:"m-2 text-light" %>
