--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -6,7 +6,7 @@
       </div>
     </div>
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= form_for(rescue, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
     <%= render "public/shared/error_messages", resource: resource %>
     <div class="row mb-1">
@@ -69,13 +69,15 @@
       </div>
     </div>
 
-    <div class="col-lg-4 mr-3" >
+    <div class="row">
+      <div class="col-lg-4 mr-3" >
         <%= f.submit "編集内容を保存" %>
       </div>
-
       <div class="col-lg-2" >
         <%= link_to "退会する", class: "btn btn-sm btn-danger" %>
       </div>
     </div>
+
+    <% end %>
   <% end %>
   </div>
