--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,1 +1,79 @@
-<h1>ここはマイページ作成場所</h1>
+<main>
+  <div class="container">
+    <div class="row my-3">
+      <h4>マイページ</h4>
+    </div>
+
+    <div class="row mb-2">
+      <div class="col-md-2">
+        <p>登録情報</p>
+      </div>
+      <div class="col-md-2">
+        <%= link_to "編集する", public_customers_information_edit_path, class: "btn btn-success" %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-2 border border-dark">
+        <text>氏名</text>
+      </div>
+      <div class="col-lg-4 border border-dark">
+
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-2 border border-dark">
+        <text>カナ</text>
+      </div>
+      <div class="col-lg-4 border border-dark">
+
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-2 border border-dark">
+        <text>郵便番号</text>
+      </div>
+      <div class="col-lg-4 border border-dark">
+
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-2 border border-dark">
+        <text>住所</text>
+      </div>
+      <div class="col-lg-4 border border-dark">
+
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-2 border border-dark">
+        <text>電話番号</text>
+      </div>
+      <div class="col-lg-4 border border-dark">
+
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-2 border border-dark">
+        <text>メールアドレス</text>
+      </div>
+      <div class="col-lg-4 border border-dark">
+
+      </div>
+    </div>
+
+    <div class="row mt-3">
+      <div class="col-lg-2">
+        <p>注文一覧</p>
+      </div>
+      <div class="col-lg-2">
+        <%= link_to "一覧を見る", public_orders_index_path, class: "btn btn-primary" %>
+      </div>
+    </div>
+  </div>
+</main>
