--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -6,9 +6,9 @@
       </div>
     </div>
 
-  <%= form_for(rescue, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= form_with model: @customer, url: public_customers_information_edit_path do |f| %>
 
-    <%= render "public/shared/error_messages", resource: resource %>
+    <%= render "public/shared/error_messages", rescue: rescue %><% end %>
     <div class="row mb-1">
       <div class="col">
         <%= f.label :名前 %>
@@ -74,10 +74,9 @@
         <%= f.submit "編集内容を保存" %>
       </div>
       <div class="col-lg-2" >
-        <%= link_to "退会する", class: "btn btn-sm btn-danger" %>
+        <%= link_to "退会する", public_customers_withdraw_path, class: "btn btn-sm btn-danger" %>
       </div>
     </div>
 
-    <% end %>
   <% end %>
   </div>
