--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -18,7 +18,8 @@
         <text>氏名</text>
       </div>
       <div class="col-lg-4 border border-dark">
-
+        <%= @customer.last_name %>
+        <%= @customer.first_name %>
       </div>
     </div>
 
@@ -27,7 +28,8 @@
         <text>カナ</text>
       </div>
       <div class="col-lg-4 border border-dark">
-
+        <%= @customer.last_name_kana %>
+        <%= @customer.first_name_kana %>
       </div>
     </div>
 
@@ -36,7 +38,7 @@
         <text>郵便番号</text>
       </div>
       <div class="col-lg-4 border border-dark">
-
+        <%= @customer.postal_code%>
       </div>
     </div>
 
@@ -45,7 +47,7 @@
         <text>住所</text>
       </div>
       <div class="col-lg-4 border border-dark">
-
+        <%= @customer.address %>
       </div>
     </div>
 
@@ -54,7 +56,7 @@
         <text>電話番号</text>
       </div>
       <div class="col-lg-4 border border-dark">
-
+        <%= @customer.telephone_number%>
       </div>
     </div>
 
@@ -63,7 +65,7 @@
         <text>メールアドレス</text>
       </div>
       <div class="col-lg-4 border border-dark">
-
+        <%= @customer.email %>
       </div>
     </div>
 
@@ -75,5 +77,6 @@
         <%= link_to "一覧を見る", public_orders_index_path, class: "btn btn-primary" %>
       </div>
     </div>
+
   </div>
 </main>
