[Add]会員側 登録情報編集ページ作成完了

--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -6,7 +6,7 @@
       </div>
     </div>
 
-  <%= form_with model: @customer, url: public_customers_information_edit_path do |f| %>
+  <%= form_with model: @customer, url: public_customers_information_path, method: :patch do |f| %>
 
     <div class="row mb-1">
       <div class="col">
