[Add]会員側のサインアップcontrollerに「退会済みの顧客をログインさせない」機能の追加、「退会する」のボタンのリンクの作成、リンク先のページ（未編集）の追加

--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -5,7 +5,7 @@
         <h4>会員情報編集</h4>
       </div>
     </div>
-
+  <!--form_withのurlは送りたい先のurlを記載し、行いたいメソッドも記載する-->
   <%= form_with model: @customer, url: public_customers_information_path, method: :patch do |f| %>
 
     <div class="row mb-1">
@@ -73,7 +73,7 @@
         <%= f.submit "編集内容を保存" %>
       </div>
       <div class="col-lg-2" >
-        <%= link_to "退会する", public_customers_withdraw_path, class: "btn btn-sm btn-danger" %>
+        <%= link_to "退会する", public_customers_confirm_withdraw_path, class: "btn btn-sm btn-danger" %>
       </div>
     </div>
 
