--- a/app/views/public/customers/confirm.html.erb
+++ b/app/views/public/customers/confirm.html.erb
@@ -1,1 +1,24 @@
-<h1>ここは退会確認画面</h1>
+<main>
+  <div class="container">
+    <div class="row mt-5 justify-content-center">
+      <strong>本当に退会しますか？</strong>
+    </div>
+
+    <div class="row my-2 justify-content-center">
+      <p class="text-center">
+        退会すると、会員登録情報や<br>
+        これまでの購入履歴が閲覧できなくなります。<br>
+        退会する場合は、「退会する」をクリックしてください。
+      </p>
+    </div>
+
+    <div class="row justify-content-center">
+      <div class="col-lg-2 justify-content-center">
+        <%= link_to "退会しない", public_customers_mypage_path(@customer), class: "btn btn-primary" %>
+      </div>
+      <div class="col-lg-2 justify-content-center">
+        <%= link_to "退会する", public_customers_withdraw_path, method: :patch, data: { confilm: "本当に退会しますか？" }, class: "btn btn-danger" %>
+      </div>
+    </div>
+  </div>
+</main>
