[Add]application,controllerのnavber高さ調整、sample_jpg.jpg画像の追加

--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,1 +1,81 @@
-<h1>ここは商品一覧画面</h1>
+<main>
+  <div class="container">
+    <div class="row mt-4">
+      <div class="col-lg-4 text-right">
+        <h3>商品一覧</h3>
+      </div>
+      <div class="col-lg-2 ">
+        <p>（全x件）</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-3"></div>
+      <h3>新着情報</h3>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-3"></div>
+      <div class="col-lg-2">
+        <tr>
+          <th><img src="/assets/no_image.jpg"></th>
+          <th><p>商品名</p></th>
+          <th><p>¥0,000</p></th>
+        </tr>
+      </div>
+      <div class="col-lg-2">
+        <tr>
+          <th><img src="/assets/no_image.jpg"></th>
+          <th><p>商品名</p></th>
+          <th><p>¥0,000</p></th>
+        </tr>
+      </div>
+      <div class="col-lg-2">
+        <tr>
+        <th><img src="/assets/no_image.jpg"></th>
+          <th><p>商品名</p></th>
+          <th><p>¥0,000</p></th>
+        </tr>
+      </div>
+      <div class="col-lg-2">
+        <tr>
+        <th><img src="/assets/no_image.jpg"></th>
+          <th><p>商品名</p></th>
+          <th><p>¥0,000</p></th>
+        </tr>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-3"></div>
+      <div class="col-lg-2">
+        <tr>
+          <th><img src="/assets/no_image.jpg"></th>
+          <th><p>商品名</p></th>
+          <th><p>¥0,000</p></th>
+        </tr>
+      </div>
+      <div class="col-lg-2">
+        <tr>
+          <th><img src="/assets/no_image.jpg"></th>
+          <th><p>商品名</p></th>
+          <th><p>¥0,000</p></th>
+        </tr>
+      </div>
+      <div class="col-lg-2">
+        <tr>
+        <th><img src="/assets/no_image.jpg"></th>
+          <th><p>商品名</p></th>
+          <th><p>¥0,000</p></th>
+        </tr>
+      </div>
+      <div class="col-lg-2">
+        <tr>
+        <th><img src="/assets/no_image.jpg"></th>
+          <th><p>商品名</p></th>
+          <th><p>¥0,000</p></th>
+        </tr>
+      </div>
+    </div>
+  </div>
+</main>
