--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -9,13 +9,7 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-lg-3"></div>
-      <h3>新着情報</h3>
-    </div>
-
-    <div class="row">
-      <div class="col-lg-3"></div>
+    <div class="row justify-content-center">
       <div class="col-lg-2">
         <tr>
           <th><img src="/assets/no_image.jpg"></th>
@@ -46,8 +40,7 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-lg-3"></div>
+    <div class="row my-3 justify-content-center">
       <div class="col-lg-2">
         <tr>
           <th><img src="/assets/no_image.jpg"></th>
