[fix]管理者ログインが出来るように修正、ログイン後のapp,controllerの会員一覧のpashの名前を単数形から複数形に修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
                   <%= link_to "商品一覧", admin_items_path, class:"m-2 text-light" %>
                 </li>
                 <li>
-                  <%= link_to "会員一覧", admin_customer_path, class:"m-2 text-light" %>
+                  <%= link_to "会員一覧", admin_customers_path, class:"m-2 text-light" %>
                 </li>
                 <li>
                 <%= link_to "注文一覧", class:"m-2 text-light" %>
