[Add]商品詳細ページの作成。　次回以降、showページも含む画像の大きさの設定に取り組む

--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,2 +1,53 @@
-<h1>Admin::Items#show</h1>
-<p>Find me in app/views/admin/items/show.html.erb</p>
+<main>
+  <div class="container">
+    <div class="row my-4">
+      <div class="col-lg-6 justify-content-center">
+        <h4>商品詳細</h4>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-4 mr-3">
+        <img src="/assets/sample_jpg.jpg">
+      </div>
+      <div class="col-lg-6">
+        <div class="row">
+          <div class="col-lg-3">
+            <p>商品名</p>
+         </div>
+         <div class="col-lg-4">
+          <%= @item.name %>
+         </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-3">
+            <p>商品説明文</p>
+          </div>
+          <div class="col-lg-4">
+            <%= @item.introduction %>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-3">
+            <p>税込価格<br>
+              （税抜価格）
+            </p>
+          </div>
+          <div class="col-lg-4">
+            <p>(<%= @item.price %>)円</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="row justify-content-center">
+      <div class="col-lg-2">
+        <%= link_to "編集する", edit_admin_item_path(@item.id), class: "btn btn-success" %>
+      </div>
+    </div>
+
+  </div>
+</main>
