--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -26,7 +26,9 @@
           <%= item.id %>
         </td>
         <td width="30%">
-          <%= item.name %>
+          <%= link_to admin_items_path(item.id) do %>
+            <%= item.name %>
+          <% end %>
         </td>
         <td width="60%">
           <%= item.price %>
