--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -6,9 +6,10 @@
       </div>
     </div>
 
+    
     <div class="row">
       <div class="col-lg-4 mr-3">
-        <img src="/assets/sample_jpg.jpg">
+        <%= image_tag @item.image.variant( resize: "300" )  %>
       </div>
       <div class="col-lg-6">
         <div class="row">
@@ -42,6 +43,7 @@
 
       </div>
     </div>
+    
 
     <div class="row justify-content-center">
       <div class="col-lg-2">
