[Add]管理者側のindexページにページネーションの実装兼完了

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -14,28 +14,34 @@
     <div class="row">
       <div class="col-lg-10 justify-content-center">
         <table class="border-top border-bottom" width="100%">
-    <tr class="border-bottom">
-      <th width="10%">商品ID</th>
-      <th width="30%">商品名</th>
-      <th width="60%">税抜価格</th>
-    </tr>
+          <tr class="border-bottom">
+            <th width="10%">商品ID</th>
+            <th width="30%">商品名</th>
+            <th width="60%">税抜価格</th>
+          </tr>
     <!--繰り返し文(each文)を使って以下の物を量産　1５個分あたりになったらページネーションで次のページに飛ばす-->
-    <% @items.each do |item| %>
-      <tr class="border-bottom">
-        <td width="10%">
-          <%= item.id %>
-        </td>
-        <td width="30%">
-          <%= link_to admin_item_path(item.id) do %>
-            <%= item.name %>
+          <% @items.each do |item| %>
+          <tr class="border-bottom">
+            <td width="10%">
+              <%= item.id %>
+            </td>
+            <td width="30%">
+              <%= link_to admin_item_path(item.id) do %>
+                <%= item.name %>
+              <% end %>
+            </td>
+            <td width="60%">
+              <%= item.price %>
+            </td>
+          </tr>
           <% end %>
-        </td>
-        <td width="60%">
-          <%= item.price %>
-        </td>
-      </tr>
-    <% end %>
-  </table>
+        </table>
+      </div>
+    </div>
+
+    <div class="row mt-5 justify-content-center">
+      <div class="col-lg4">
+        <%= paginate @items %>
       </div>
     </div>
 
