[Add]会員側の商品詳細ページにて税込み価格での表示を実装

--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -11,10 +11,12 @@
 
     <div class="row justify-content-center">
       <% @items.each do |item| %>
-      <div class="col-lg-2">
+      <div class="col-lg-3 mb-2 d-flex flex-wrap">
         <tr>
           <td>
-            <img src="/assets/no_image.jpg">
+            <%= link_to public_item_path(item.id) do%>
+              <%= image_tag item.image.variant( resize: "150" )  %>
+            <% end %>
           </td>
           <td>
             <%= item.name %>
@@ -24,59 +26,8 @@
           </td>
         </tr>
       </div>
-      <div class="col-lg-2">
-        <tr>
-          <th><img src="/assets/no_image.jpg"></th>
-          <th><p>商品名</p></th>
-          <th><p>¥0,000</p></th>
-        </tr>
-      </div>
-      <div class="col-lg-2">
-        <tr>
-        <th><img src="/assets/no_image.jpg"></th>
-          <th><p>商品名</p></th>
-          <th><p>¥0,000</p></th>
-        </tr>
-      </div>
-      <div class="col-lg-2">
-        <tr>
-        <th><img src="/assets/no_image.jpg"></th>
-          <th><p>商品名</p></th>
-          <th><p>¥0,000</p></th>
-        </tr>
-      </div>
-    </div>
-    <% end %>
+      <% end %>
 
-    <div class="row my-3 justify-content-center">
-      <div class="col-lg-2">
-        <tr>
-          <th><img src="/assets/no_image.jpg"></th>
-          <th><p>商品名</p></th>
-          <th><p>¥0,000</p></th>
-        </tr>
-      </div>
-      <div class="col-lg-2">
-        <tr>
-          <th><img src="/assets/no_image.jpg"></th>
-          <th><p>商品名</p></th>
-          <th><p>¥0,000</p></th>
-        </tr>
-      </div>
-      <div class="col-lg-2">
-        <tr>
-        <th><img src="/assets/no_image.jpg"></th>
-          <th><p>商品名</p></th>
-          <th><p>¥0,000</p></th>
-        </tr>
-      </div>
-      <div class="col-lg-2">
-        <tr>
-        <th><img src="/assets/no_image.jpg"></th>
-          <th><p>商品名</p></th>
-          <th><p>¥0,000</p></th>
-        </tr>
-      </div>
     </div>
 
      <div class="row mt-5 justify-content-center">
