--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,2 +1,79 @@
-<h1>Admin::Customers#show</h1>
-<p>Find me in app/views/admin/customers/show.html.erb</p>
+<main>
+  <div class="container">
+    <div class="row my-4">
+      <div>
+        <h4><%= @customer.last_name%>
+            <%= @customer.first_name%>
+            さんの会員詳細
+        </h4>
+      </div>
+    </div>
+
+    <div class="row mb-1">
+      <div class="col">
+        <p>名前</p>
+      </div>
+      <div class="col">
+        <p>（姓）</p><%= @customer.last_name %>
+      </div>
+      <div class="col">
+        <p>（名）</p><%= @customer.first_name %>
+      </div>
+    </div>
+
+    <div class="row mb-1">
+      <div class="col">
+        <p>フリガナ</p>
+      </div>
+      <div class="col">
+        <p>（セイ）</p><%= @customer.last_name_kana %>
+      </div>
+      <div class="col">
+        <p>（メイ）</p><%= @customer.first_name_kana %>
+      </div>
+    </div>
+
+    <div class="row mb-1">
+      <div class="col">
+        <p>メールアドレス</p>
+      </div>
+      <div class="col">
+        <%= @customer.email %>
+      </div>
+    </div>
+
+    <div class="row mb-1">
+      <div class="col">
+        <p>郵便番号（ハイフンなし）</p>
+      </div>
+      <div class="col">
+        <%= @customer.postal_code %>
+      </div>
+    </div>
+
+    <div class="row mb-1">
+      <div class="col">
+        <p>住所</p>
+      </div>
+      <div class="col-lg-6">
+        <%= @customer.address %>
+      </div>
+    </div>
+
+    <div class="row mb-1">
+      <div class="col">
+        <p>電話番号（ハイフンなし）</p>
+      </div>
+      <div class="col">
+        <%= @customer.telephone_number %>
+      </div>
+    </div>
+
+    <div class="row mb-1 justify-content-center">
+      <div class="col-lg-2" >
+
+      </div>
+    </div>
+
+  </div>
+</main>
