--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -26,10 +26,12 @@
         <div class="col-lg-3">
         </div>
       </div>
+
       <div class="row">
         <div class="col-lg-3"></div>
         <h3>新着情報</h3>
       </div>
+
       <div class="row">
         <div class="col-lg-3"></div>
         <div class="col-lg-2">
@@ -61,6 +63,13 @@
             </tr>
         </div>
       </div>
+
+      <div class="row d-flex justify-content-end">
+        <div class="col-lg-2">
+          <%= link_to "全ての商品を見る >", public_homes_top_path %>
+        </div>
+      </div>
+
     </div>
   </main>
 </body>
