--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,2 +1,102 @@
-<h1>Admin::Customers#edit</h1>
-<p>Find me in app/views/admin/customers/edit.html.erb</p>
+<main>
+  <div class="container">
+    <div class="row my-4">
+      <div>
+        <h4><%= @customer.last_name%>
+            <%= @customer.first_name%>
+            さんの会員情報編集
+        </h4>
+      </div>
+    </div>
+
+    <div class="row mb-1">
+      <div class="col-lg-3">
+        <p>会員ID</p>
+      </div>
+      <div class="col-lg-3">
+        <%= @customer.id %>
+      </div>
+    </div>
+
+    <%= form_with model: @customer, url: admin_customer_path, method: :patch do |f| %>
+    <div class="row mb-1">
+      <div class="col-lg-3">
+        <%= f.label :氏名 %>
+      </div>
+      <div class="col-lg-2 mr-3">
+        <%= f.text_field :last_name, autocomplete: "last_name" %>
+      </div>
+      <div class="col-lg-2">
+        <%= f.text_field :first_name, autocomplete: "first_name" %>
+      </div>
+    </div>
+
+    <div class="row mb-1">
+      <div class="col-lg-3">
+        <%= f.label :フリガナ %>
+      </div>
+      <div class="col-lg-2 mr-3">
+        <%= f.text_field :last_name_kana, autocomplete: "last_name_kana" %>
+      </div>
+      <div class="col-lg-2">
+        <%= f.text_field :first_name_kana, autocomplete: "first_name_kana" %>
+      </div>
+    </div>
+
+    <div class="row mb-1">
+      <div class="col-lg-3">
+        <%= f.label :郵便番号 %>
+      </div>
+      <div class="col-lg-3">
+        <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code" %>
+      </div>
+    </div>
+
+    <div class="row mb-1">
+      <div class="col-lg-3">
+        <%= f.label :住所 %>
+      </div>
+      <div class="col-lg-6 form-label">
+        <%= f.text_area :address, autofocus: true, autocomplete: "address", class: "form-control", style: "width:80%", rows: "1" %>
+      </div>
+    </div>
+
+    <div class="row mb-1">
+     <div class="col-lg-3">
+        <%= f.label :電話番号 %>
+      </div>
+      <div class="col-lg-3">
+        <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number" %>
+      </div>
+    </div>
+
+    <div class="row mb-1">
+      <div class="col-lg-3">
+        <%= f.label :メールアドレス %>
+      </div>
+      <div class="col-lg-3">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div>
+    </div>
+
+    <div class="row mb-1">
+      <div class="col-lg-3">
+        <p>会員ステータス</p>
+      </div>
+      <div class="col-lg-3">
+    　   <%= f.radio_button :is_deleted, :false %>
+        <%= f.label :membership_status, "有効" %>
+
+        <%= f.radio_button :is_deleted, :true %>
+        <%= f.label :membership_status, "無効" %>
+      </div>
+    </div>
+
+    <div class="row justify-content-center">
+      <div class="col-lg-3">
+        <%= f.submit :変更を保存, class: "btn btn-success" %>
+      </div>
+    </div>
+    <% end %>
+  </div>
+</main>
