--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -14,10 +14,10 @@
         <%= f.label :名前 %>
       </div>
       <div class="col">
-        <p>（姓）</p><%= f.text_field :last_name, autocomplete: "last_name" %>
+        <p>（姓）<%= f.text_field :last_name, autocomplete: "last_name" %><p>
       </div>
       <div class="col">
-        <p>（名）</p><%= f.text_field :first_name, autocomplete: "first_name" %>
+        <p>（名）<%= f.text_field :first_name, autocomplete: "first_name" %></p>
       </div>
     </div>
 
@@ -26,10 +26,10 @@
         <%= f.label :フリガナ %>
       </div>
       <div class="col">
-        <p>（セイ）</p><%= f.text_field :last_name_kana, autocomplete: "last_name_kana" %>
+        <p>（セイ）<%= f.text_field :last_name_kana, autocomplete: "last_name_kana" %></p>
       </div>
       <div class="col">
-        <p>（メイ）</p><%= f.text_field :first_name_kana, autocomplete: "first_name_kana" %>
+        <p>（メイ）<%= f.text_field :first_name_kana, autocomplete: "first_name_kana" %></p>
       </div>
     </div>
 
@@ -56,7 +56,7 @@
         <%= f.label :住所 %>
       </div>
       <div class="col-lg-6">
-        <%= f.text_field :address, autofocus: true, autocomplete: "address" %>
+        <%= f.text_area :address, autofocus: true, autocomplete: "address" %>
       </div>
     </div>
 
