[Add]カート一覧ページの大まかな作成(次回、表の高さ等の調整、each文の実装)

--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -8,5 +8,27 @@
         <%= link_to "カートを空にする", public_cart_items_index_path, class: "btn btn-danger" %>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col jstifuy-content-center">
+      <table width="100%">
+        <tr height="50%">
+          <th class="border"  width="40%">商品名</th>
+          <th class="border"  width="15%">単価(税込)</th>
+          <th class="border"  width="15%">数量</th>
+          <th class="border"  width="15%">小計</th>
+          <th class="border"  width="15%"></th>
+        </tr>
+
+        <tr height="50%">
+          <td class="border"  width="40%">名前</td>
+          <td class="border"  width="15%">1100</td>
+          <td class="border"  width="15%"></td>
+          <td class="border"  width="15%">1000</td>
+          <td class="border"  width="15%">削除</td>
+        </tr>
+      </table>
+      </div>
+    </div>
   </div>
 </main>
