--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -12,7 +12,7 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-10 justify-content-center">
+      <div class="col-lg-10 jstifuy-content-center">
         <table class="border-top border-bottom" width="100%">
           <tr class="border-bottom">
             <th width="10%">商品ID</th>
