[Add]会員側、カート一覧ページ、支払い方法選択画面へのリンク作成完了

--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -66,5 +66,11 @@
       </div>
     </div>
 
+    <div class="row justify-content-center mt-4">
+      <div class="col-lg-3">
+        <%= link_to "情報入力に進む", public_orders_new_path, class: "btn btn-success" %>
+      </div>
+    </div>
+
   </div>
 </main>
